--- a/servidor/views/autenticar/index.ejs
+++ b/servidor/views/autenticar/index.ejs
@@ -8,11 +8,11 @@
   <title>Autenticação</title>
 </head>
 <body>
-  <form method="post" action="" >
+  <form method="post" action="/logar" >
     <h1 class="a11y-hidden">Login Form</h1>
     <div>
       <label class="label-email">
-        <input type="email" class="text" name="usuario" placeholder="Usuario" />
+        <input type="text" class="text" name="usuario" placeholder="Usuario" />
         <span class="required">Usuario</span>
       </label>
     </div>
@@ -24,21 +24,10 @@
       </label>
     </div>
     <input type="submit" value="Log In" />
-    <div class="email">
-      <a href="#">Forgot password?</a>
-    </div>
-    <figure aria-hidden="true">
-      <div class="person-body"></div>
-      <div class="neck skin"></div>
-      <div class="head skin">
-        <div class="eyes"></div>
-        <div class="mouth"></div>
-      </div>
-      <div class="hair"></div>
-      <div class="ears"></div>
-      <div class="shirt-1"></div>
-      <div class="shirt-2"></div>
-    </figure>
+   
+    
+  
+
   </form>
 </body>
 </html>
