pelo menos deu certo

--- a/servidor/views/cadastrar.ejs
+++ b/servidor/views/cadastrar.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="page">
-        <form method="POST" class="formLogin" action="/usuario/cadastrar">
+        <form method="POST" class="formLogin" action="/usuarios/cadastrar">
             <h1>Cadastrar</h1>
             <p>Digite os seus dados de acesso.</p>
             <label for="email">Nome</label>
