--- a/servidor/views/autenticar/index.ejs
+++ b/servidor/views/autenticar/index.ejs
@@ -14,7 +14,7 @@
             <h1>Login</h1>
             <p>Digite os seus dados de acesso.</p>
             <label for="email">E-mail</label>
-            <input type="email" name="nome" placeholder="Digite seu e-mail" autofocus="true"  />
+            <input type="text" name="nome" placeholder="Digite seu e-mail" autofocus="true"  />
             <label for="password">Senha</label>
             <input type="password" name="senha" placeholder="Digite seu e-mail" />
             <a href="/">Esqueci minha senha</a>
