--- a/servidor/views/listar.ejs
+++ b/servidor/views/listar.ejs
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
-  
-  <form action="/deslogar" method="post">
-    <input type="submit" value="Deslogar">
-  </form>
+    <% usuarios.forEach((usuario) => { %>
+        <%= usuario.nome %>
+        <%= usuario.senha %>
+    <% }) %>
 </body>
 </html>
