--- a/servidor/views/cadastrar.ejs
+++ b/servidor/views/cadastrar.ejs
@@ -13,14 +13,14 @@
         <form method="POST" class="formLogin" action="/usuarios/cadastrar">
             <h1>Cadastrar</h1>
             <p>Digite os seus dados de acesso.</p>
-            <label for="email">Nome</label>
+            <label for="email">Email</label>
             <input type="text" name="nome" placeholder="Digite seu e-mail" autofocus="true"  />
             <label for="password">Senha</label>
             <input type="password" name="senha" placeholder="Digite sua senha" />
             <label for="password">Confirma senha</label>
             <input type="password" name="confirme" placeholder="confirme sua senha" />
-            <a href="/">Esqueci minha senha</a>
-            <input type="submit" value="Entrar" class="btn" action="/usuario/cadastrar"/>
+            
+            <input type="submit" value="Cadastrar" class="btn" action="/usuario/cadastrar"/>
         </form>-
     </div>
 </body>
