--- a/servidor/views/autenticar/index.ejs
+++ b/servidor/views/autenticar/index.ejs
@@ -12,12 +12,13 @@
     <div class="page">
         <form method="POST" class="formLogin" action="/logar">
             <h1>Login</h1>
-            <p>Digite os seus dados de acesso.</p>
+          
             <label for="email">E-mail</label>
             <input type="text" name="nome" placeholder="Digite seu e-mail" autofocus="true"  />
             <label for="password">Senha</label>
             <input type="password" name="senha" placeholder="Digite seu e-mail" />
-            <a href="/">Esqueci minha senha</a>
+            <p><a href="/">Esqueci minha senha</a></p>
+
             <input type="submit" value="Entrar" class="btn" />
         </form>-
     </div>
