--- a/servidor/views/listar.ejs
+++ b/servidor/views/listar.ejs
@@ -8,9 +8,25 @@
   <title>Document</title>
 </head>
 <body>
-    <% usuarios.forEach((usuario) => { %>
-        <%= usuario.nome %>
-        <%= usuario.senha %>
-    <% }) %>
+  <div class="fundo">
+    <div class="universe-theme">
+      <div class="card-container">
+        <% usuarios.forEach((usuario) => { %>
+          <div class="card">
+            <div class="card-header">
+              <h3><%= usuario.nome %></h3>
+            </div>
+            <div class="card-content">
+              <p class="senha-hidden"><%= usuario.senha %></p>
+            </div>
+            
+          </div>
+        <% }) %>
+      </div>
+    </div>
+
+  </div>
+</body>
+  
 </body>
 </html>
