--- a/servidor/views/autenticar/index.ejs
+++ b/servidor/views/autenticar/index.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="page">
-        <form method="POST" class="formLogin" action="/logar">
+        <form method="POST" class="formLogin" action="/user/authenticated">
             <h1>Login</h1>
           
             <label for="email">E-mail</label>
